--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "vue": "~2.7.8",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -20,12 +20,12 @@
     "@vue/cli-plugin-router": "~4.5.19",
     "@vue/cli-plugin-typescript": "~4.5.19",
     "@vue/cli-service": "~4.5.19",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^9.2.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "typescript": "~4.1.5",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "~2.6.14"
   }
 }
